added account delete rest endpoint
